[package]
name = "quanshu"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 or MIT"

[lib]
name = "quanshu"
# crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "pydict_convert"
harness = false

[dependencies]
log = "0.4"
anyhow = "1"
futures = "0.3"
socket2 = "0.4"
async-stream = "0.3"
tokio-native-tls = "0.3"
hyper-tungstenite = "0.8"
tokio-graceful-shutdown = "0.6"
pyo3-futures = { git = "https://github.com/songww/pyo3-futures" }
once_cell = "1.10"
parking_lot = "0.12"


[dependencies.clap]
version = "3"
features = ["debug", "derive", "yaml", "env"]

[dependencies.tokio]
version = "1"
features = [
  "fs",
  "net",
  "sync",
  "time",
  "io-std",
  "io-util",
  "parking_lot",
  "rt-multi-thread",
]

[dependencies.tokio-stream]
version = "0.1"
features = ["net", "sync", "time", "io-util"]

[dependencies.hyper]
version = "0.14"
features = ["tcp", "runtime", "server", "stream", "http1", "http2"]

[dependencies.pyo3]
version = "0.16"
features = ["auto-initialize", "anyhow", "abi3"]

[dev-dependencies]
criterion = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
