[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "quanshu"
requires-python = ">=3.7"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["uvloop == 0.16", "click == 8", "pyyaml"]

[project.optional-dependencies]
test = ["pytest > 5.0.0", "pytest-cov[all]", "pytest-asyncio", "httpx"]

[project.urls]
homepage = "https://github.com/songww/quanshu"
documentation = "readthedocs.org"
repository = "https://github.com/songww/quanshu"
changelog = "github.com/songww/quanshu/blob/master/CHANGELOG.md"

[project.scripts]
quanshu = "quanshu:main"
[project.console_scripts]
quanshu = "quanshu:main"
